--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
       }],
   "start_url": "/index.html?homescreen=1",
   "display": "standalone",
-  "background_color": "#3E4EB8",
-  "theme_color": "#2F3BA2"
+  "background_color": "#FFFFFF",
+  "theme_color": "#2A95E4"
 }
